[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Timer/timerDisplay.gd" type="Script" id=1]
[ext_resource path="res://Assets/Font/fonts/Pangolin/Pangolin-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 2 )

[node name="timerDisplay" type="Control"]
margin_left = 400.0
margin_top = -1.0
margin_right = 610.0
margin_bottom = 199.0
rect_min_size = Vector2( 200, 200 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ms" type="Timer" parent="."]
autostart = true

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 121.938
margin_top = 140.414
margin_right = 345.938
margin_bottom = 240.414
text = "log time"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
visible = false
margin_left = 377.203
margin_top = 139.707
margin_right = 601.203
margin_bottom = 239.707
text = "restart timer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
visible = false
margin_left = 123.352
margin_top = 258.501
margin_right = 347.352
margin_bottom = 358.501
text = "start timer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
visible = false
margin_left = 377.203
margin_top = 262.036
margin_right = 601.203
margin_bottom = 362.036
text = "pause timer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerDisplay" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 29.0
margin_top = 27.0
margin_right = 166.0
margin_bottom = 26.9998
custom_fonts/normal_font = SubResource( 1 )
text = "Timer"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="ms" to="." method="_on_ms_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
